--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +28,7 @@
             </div>
             <div id="right-side">
                 <div id="image-placeholder">
-                    <p>this is a placeholder for an image</p>
+                    <img src="Shivanshu.png" alt=" Shivanshu">
                 </div>
             </div>
         </div>
@@ -38,24 +39,24 @@
             <h2>Some random information</h2>
             <div id="illustration">
                 <div class="image-container">
-                    <img src="Flower.jpg" alt="Flower">
+                    <img src="Shivanshu.png" alt=" Shivanshu">
                     <p>this is some subtext<br>
                        under an illustration<br>
                        or image</p>
                 </div>
                 <div class="image-container">
-                    <img src="Flower.jpg" alt="Flower">
+                    <img src="Shivanshu.png" alt=" Shivanshu">
                     <p>this is some subtext<br>
                        under an illustration<br>or image</p>
                 </div>
                 <div class="image-container">
-                    <img src="Flower.jpg" alt="Flower">
+                    <img src="Shivanshu.png" alt=" Shivanshu">
                     <p>this is some subtext<br>
                        under an illustration<br>
                        or image</p>
                 </div>
                 <div class="image-container">
-                    <img src="Flower.jpg" alt="Flower">
+                    <img src="Shivanshu.png" alt=" Shivanshu">
                     <p>this is some subtext<br>
                        under an illustration<br>
                        or image</p>
